Version 0.68 --	21 June 2003   <skimo@kotnet.org> Sven Verdoolaege

	o Call the fcgi lib's attach/detach <robs@fastcgi.com>

Version 0.67 --	22 December 2002   <skimo@kotnet.org> Sven Verdoolaege

	o Fixes for pure perl version based on report and patch
	  from "Kurtis D. Rader" <kdrader@us.ibm.com>
	o FCGI_UndoBinding perl 5.8.0 compatibility
	  Reported by Marko Asplund <aspa@kronodoc.fi>
	o Fix problem with fcgi_config.h on win32.
	  Reported by Igor Franchuk <softdep@rol.ru>
	o Add minimal tests

Version 0.66 --	5 September 2002   <skimo@kotnet.org> Sven Verdoolaege

	o perl 5.8.0 compatibility fix by Autrijus
	o library fixes from Rob

Version 0.65 --	19 February 2002   <skimo@kotnet.org> Sven Verdoolaege

	o fix perl 5.005 compatibility problem
	o fix strict warning

Version 0.64 --	25 September 2001   <skimo@kotnet.org> Sven Verdoolaege
Version 0.63 --	24 September 2001   <skimo@kotnet.org> Sven Verdoolaege

	o Update build process

Version 0.62 --	21 September 2001   <skimo@kotnet.org> Sven Verdoolaege

	o Move version number to separate file

Version 0.61 --	20 September 2001   <skimo@kotnet.org> Sven Verdoolaege

	o Fix refcounting bug
	o Add GetEnvironment for pure version
	o Add LastCall method
	o Allow filehandle for Request's socket parameter
	o library fixes  ("Rob Saccoccio" <robs@chelsea.net>)

Version 0.60 --	8 July 2001   <skimo@kotnet.org> Sven Verdoolaege

	o Allow specification of purity on command line
	    (suggested by Rob Brown <rbrown@about-inc.com>)
	o Fix bug in pure perl implementation
	o Don't try to compile anything on pure perl build
	o Add BINMODE method
	o Add comment on socket permissions

Version 0.59 --	31 December 2000   <skimo@kotnet.org> Sven Verdoolaege

	o preliminary pure perl implementation
	o copy win32 configuration file instead of moving it
	o convert echo.fpl to new interface

Version 0.58 --	15 November 2000   <skimo@kotnet.org> Sven Verdoolaege

	o fix bug introduced in 0.57
